# pi-modal-mcp

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
mcp-runtime/: index.ts  mcp.json.example  package.json
modal-frontend/: app.py
modal-mcp/: modal_mcp.py  run.sh
